--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de Fotos 4x4</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F000%2F496%2F330%2Foriginal%2Ftag-icon-design-vector.jpg&f=1&nofb=1&ipt=881432ba1cdce6e438a472664cf9d7d27201d2b4256bd95b55ea64c84cbba658&ipo=images">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         * {
